Fix bullet point wrapping issue

--- a/components/DailyFantasyLineups.module.css
+++ b/components/DailyFantasyLineups.module.css
@@ -66,7 +66,7 @@
 }
 .accordionContent ul li {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   margin: 4px 0;
 }
 .accordionContent ul li > * {
